[package]
name = "png2lvgl"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["metaneturons"]
license = "GPL-3.0"
description = "Convert PNG images to LVGL C arrays"
repository = "https://github.com/metaneturons/png2lvgl"
homepage = "https://github.com/metaneutrons/png2lvgl"
documentation = "https://github.com/metaneutrons/png2lvgl"
readme = "README.md"
keywords = ["lvgl", "embedded", "graphics", "image", "converter"]
categories = ["command-line-utilities", "embedded", "graphics"]

[package.metadata.deb]
maintainer = "metaneutrons"
copyright = "2025, metaneutrons <https://github.com/metaneutrons>"
license-file = ["LICENSE", "0"]
extended-description = """\
png2lvgl converts PNG images to LVGL (Light and Versatile Graphics Library) \
compatible C arrays. It supports multiple color formats including true color, \
indexed palettes, and alpha-only modes, making it ideal for embedded systems \
and resource-constrained environments."""
depends = "$auto"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/png2lvgl", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/png2lvgl/", "644"],
    ["target/release/build/png2lvgl-*/out/png2lvgl.1", "usr/share/man/man1/", "644"],
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
chrono = "0.4"
