[package]
name = "png2lvgl"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
authors = ["metaneutrons"]
license = "GPL-3.0-only"
description = "Convert PNG images to LVGL C arrays"
repository = "https://github.com/metaneutrons/png2lvgl"
homepage = "https://github.com/metaneutrons/png2lvgl"
readme = "README.md"
keywords = ["lvgl", "embedded", "graphics", "image", "converter"]
categories = ["command-line-utilities", "embedded", "graphics"]

[package.metadata.deb]
maintainer = "metaneutrons"
copyright = "2025, metaneutrons <https://github.com/metaneutrons>"
license-file = ["LICENSE", "0"]
extended-description = """\
png2lvgl converts PNG images to LVGL (Light and Versatile Graphics Library) \
compatible C arrays. It supports multiple color formats including true color, \
indexed palettes, and alpha-only modes, making it ideal for embedded systems \
and resource-constrained environments."""
depends = "$auto"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/png2lvgl", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/png2lvgl/", "644"],
    ["target/release/build/png2lvgl-*/out/png2lvgl.1", "usr/share/man/man1/", "644"],
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
image = { version = "=0.25.10", default-features = false, features = ["png"] }
thiserror = "=2.0.18"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[build-dependencies]
built = { version = "=0.8.0", features = ["git2"] }
clap = { version = "=4.6.1", features = ["derive"] }
clap_mangen = "=0.3.0"
chrono = "=0.4.44"
